--- a/templates/posts/list_view.html
+++ b/templates/posts/list_view.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% for post in posts %}
     <div class="card" style="width: 18rem;">
+      <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap"></img>
       <div class="card-body">
         <h5 class="card-title">{{ post.title }}</h5>
         <p class="card-text">{{ post.content }}</p>
