--- a/templates/posts/list_view.html
+++ b/templates/posts/list_view.html
@@ -3,7 +3,11 @@
 {% block content %}
 {% for post in posts %}
     <div class="card" style="width: 18rem;">
-      <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap"></img>
+      {% if post.image %}
+        <img class="card-img-top" src="{{post.image.url}}" alt="Card image cap"></img>
+      {%  else %}
+          <img src="/static/placeholder.png" alt="Card image cap"></img>
+      {% endif %}
       <div class="card-body">
         <h5 class="card-title">{{ post.title }}</h5>
         <p class="card-text">{{ post.content }}</p>
