--- a/templates/posts/list_view.html
+++ b/templates/posts/list_view.html
@@ -12,6 +12,12 @@
         <h5 class="card-title">{{ post.title }}</h5>
         <p class="card-text">{{ post.content }}</p>
         <p class="card-text" style="color: crimson">{{ post.created_at }}</p>
+          <p class="card-text" style="color: blue">{{ post.category.title }}</p>
+          <p class="card-text" style="color: blueviolet">
+              {% for tag in post.tags.all %}
+                #{{ tag.title }}
+              {% endfor %}
+          </p>
         <a href="/posts/{{ post.id }}/" class="btn btn-primary">Details</a>
       </div>
     </div>
